# BitLib

./: .clang-format  .codecov.yml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/actions/benchmark_epilogue/: action.yml
.github/actions/coverage_clang/: action.yml
.github/actions/coverage_epilogue/: action.yml
.github/actions/coverage_gcc/: action.yml
.github/actions/coverage_prologue/: action.yml
.github/actions/xwin_sdk_crt/: action.yml
.github/problem_matchers/: clang_problem_matcher.json  gcc_problem_matcher.json
.github/toolchains/: clangcl_linux_to_windows.cmake
.github/workflows/: clang_cl_cross_toolchain.cmake  clang_format.yaml  cmake-multi-platform.yml  cmake_build_and_test.yml  coverage.yml  reusable.yml  usereuse.yml  xwin_sdk_crt.yml
benchmark/: CMakeLists.txt
benchmark/inc/: benchmark_utils.hpp
benchmark/src/: benchmark_main.cc  benchmark_main.cc_old  copy_backward_bench.hpp  copy_bench.hpp  count_bench.hpp  equal_bench.hpp  move_bench.hpp  rw_bench.hpp  shift_bench.hpp  swap_ranges-bench.hpp  transform_bench.hpp
doc/: benchmarks.md
example/: CMakeLists.txt
example/src/: example3.cpp
include/bitlib/: bit_concepts.hpp
include/bitlib/bit-algorithms/: accumulate.hpp  addition.hpp  bit_algorithm.hpp  bit_algorithm_details.hpp  copy.hpp  copy_backward.hpp  count.hpp  debug_utils.hpp  division.hpp  equal.hpp  fill.hpp  find.hpp  libpopcnt.h  move.hpp  multiplication.hpp  reverse.hpp  rotate.hpp  shift.hpp  swap_ranges.hpp  to_from_string.hpp  to_string.hpp  transform.hpp  transform_accumulate.hpp  transform_compare.hpp  type_traits.hpp
include/bitlib/bit-containers/: bit-containers.hpp  bit_array.hpp  bit_array_base.hpp  bit_array_dynamic_extent.hpp  bit_array_ref.hpp  bit_bitsof.hpp  bit_int.hpp  bit_integer.hpp  bit_literal.hpp  bit_mdspan_accessor.hpp  bit_policy.hpp  bit_span.hpp  bit_vector.hpp  bounds.hpp
include/bitlib/bit-iterator/: bit.hpp  bit_details.hpp  bit_iterator.hpp  bit_iterator_adapter.hpp  bit_pointer.hpp  bit_reference.hpp  bit_value.hpp  bit_word_pointer_adapter.hpp  bit_word_reference_adapter.hpp  linear_overload.hpp
profile/: CMakeLists.txt
test/: CMakeLists.txt
test/inc/: test_utils.hpp
test/src/: fixtures.hpp  test-addition.cpp  test-array.cpp  test-array_ref.cpp  test-bitwise.cpp  test-copy.cpp  test-count.cpp  test-count_leading.cpp  test-division.cpp  test-equal.cpp  test-integer.cpp  test-iterator_adapter.cpp  test-literal.cpp  test-mdspan.cpp  test-move.cpp  test-multiplication.cpp  test-span.cpp  test-to_from_string.cpp  test-to_string.cpp  test-usecase.cpp  vector_test.cpp
utils/: test_utils.hpp
